# minxinagents

./: .gitignore  deploy.txt  minxinagent_launch_presentation.html
examples/deep_research/: pyproject.toml
libs/: deploy.txt
libs/admin/: Dockerfile  pyproject.toml
libs/admin/admin_app/: db.py  main.py
libs/admin/admin_app/static/: dashboard.html
libs/cli/: .env.example  .env.test  CHANGELOG.md  Dockerfile  config-glm.toml  config-gpt.toml  docker-compose-test.yml  docker-compose.yml  langgraph.json  matplotlibrc  pyproject.toml  textual_run.py
libs/cli/deepagents_cli/: _server_config.py  agent.py  app.py  app.tcss  ask_user.py  auth.py  config.py  main.py  server_graph.py  system_prompt.md  textual_adapter.py  textual_web.py  tool_display.py  tools.py
libs/cli/deepagents_cli/built_in_skills/skill-creator/: SKILL.md
libs/cli/deepagents_cli/widgets/: ask_user.py  autocomplete.py  chat_input.py  messages.py  status.py  thread_selector.py  welcome.py
libs/cli/tests/unit_tests/: test_app.py  test_autocomplete.py  test_chat_input.py  test_main.py  test_messages.py  test_welcome.py
libs/deepagents/deepagents/: graph.py
libs/deepagents/deepagents/backends/: local_shell.py
libs/deepagents/deepagents/middleware/: filesystem.py  memory.py  skills.py  summarization.py
scripts/: build_release_tar.sh
